--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ OUTPUT_CSVs
 RealPropertyHiddenOwner_JSON.json
 MarylandCorrectionalEnterprises_JSON.json
 *.pyc
+EssentialExtraFilesForOpenDataInspectorSuccess
