--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 .idea/*
 
 *.idea
@@ -5,8 +6,7 @@
 *.pyc
 
 OUTPUT_CSVs
-
 RealPropertyHiddenOwner_JSON.json
-
 MarylandCorrectionalEnterprises_JSON.json
 EssentialExtraFilesForOpenDataInspectorSuccess
+ResourcesForRedesign
