--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ RealPropertyHiddenOwner_JSON.json
 MarylandCorrectionalEnterprises_JSON.json
 EssentialExtraFilesForOpenDataInspectorSuccess
 ResourcesForRedesign
+Scratch.py
